--- a/scss/parciales/_nav.scss
+++ b/scss/parciales/_nav.scss
@@ -2,7 +2,7 @@
 nav {
     background: linear-gradient(92.26deg, rgba(36, 38, 41, 0.12) 0%, rgba(36, 38, 41, 0.6) 99.74%);
     backdrop-filter: blur(80px);
-    width: auto;
+    width: 100%;
     height: 10vh;
 }
 
