--- a/scss/parciales/_plans.scss
+++ b/scss/parciales/_plans.scss
@@ -14,11 +14,12 @@
 }
 
 .plans {
-    height: 160vh;
+    margin-bottom: 20px;
 }
 
 .container__cards {
-   
+    margin-left: 55px;
+    width: 30vh;
     margin-top: 20px;
     align-items: center;
     gap: 20px;
@@ -32,7 +33,7 @@
     background-color: $background-cards;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
-    width: 70%;
+    width: 30vh;
     height: 45vh;
 }
 
