--- a/scss/parciales/_services.scss
+++ b/scss/parciales/_services.scss
@@ -1,12 +1,14 @@
 .services {
-    height: 100vh;
+    height: 70vh;
+    margin-bottom: 20px;
     }
 
 .container__services {
-   display: grid; 
-   grid-template-rows: 1fr 1fr 1fr;
-   grid-template-columns: 1fr 1fr;
-   height: 100%;
+    margin-top: 20px;
+    display: grid; 
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    width: auto;
 }
 
 .container__title {
@@ -31,6 +33,7 @@
     grid-column: 2;
     grid-row: 1;
     margin-left: 25%;
+    margin-top: 15%;
 
 }
 .container__title2 {
@@ -52,6 +55,7 @@
 }
 
 .landing {
+    margin-top: 15%;
     grid-column: 1;
     grid-row: 2;
     margin-left: 25%;
@@ -78,4 +82,5 @@
     grid-column: 2;
     grid-row: 3;
     margin-left: 25%;
+    margin-top: 15%;
 }
