--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,7 @@ h1 {
   left: 0px;
   top: 25px;
   border: 1px solid #7F5AF0;
+  z-index: -1;
 }
 
 .plans {
@@ -309,16 +310,93 @@ h1 {
 }
 
 .proyects {
-  height: 100vh;
+  height: 35vh;
 }
 
 .women {
   background-image: url(../../images/women.png);
   position: absolute;
-  width: 137px;
-  height: 140px;
-  left: 184px;
-  top: 2385px;
+  width: 202px;
+  height: 200px;
+  left: 120px;
+  top: 2400px;
+  z-index: -2;
+}
+
+.container__blur {
+  background: linear-gradient(91.28deg, rgba(60, 65, 202, 0.1) 0%, rgba(234, 234, 234, 0.6) 100%);
+  border-top: 0.5px solid #7F5AF0;
+  backdrop-filter: blur(40px);
+  border-radius: 0px 0px 17px 17px;
+  width: 322px;
+  height: 50px;
+  position: relative;
+  z-index: 1;
+  top: -120px;
+  left: 19px;
+}
+
+.container__landing {
+  color: #050744;
+  font-size: 0.7rem;
+  text-align: center;
+  font-weight: 600;
+  line-height: 12px;
+}
+
+.container__description {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 2px;
+  gap: 2px;
+}
+
+.text {
+  text-align: center;
+  font-size: 0.4rem;
+  color: rgba(5, 7, 68, 0.5);
+  font-weight: 700;
+  line-height: 6px;
+}
+
+.container__icons {
+  margin-top: 2px;
+  display: flex;
+  justify-content: center;
+}
+
+.left__btn {
+  background-color: #7F5AF0;
+  box-shadow: 0px -2px 4px rgba(15, 15, 15, 0.4);
+  border-radius: 17px 0px;
+  transform: rotate(90deg);
+  position: relative;
+  width: 20px;
+  height: 35px;
+  left: 5px;
+  top: -23px;
+}
+
+.row__left {
+  transform: rotate(-90deg);
+}
+
+.right__btn {
+  background-color: #7F5AF0;
+  position: relative;
+  width: 20px;
+  height: 35px;
+  box-shadow: 0px -2px 4px rgba(15, 15, 15, 0.4);
+  border-radius: 0px 17px;
+  transform: rotate(-90deg);
+  top: -23px;
+  left: 272px;
+}
+
+.row__right {
+  transform: rotate(90deg);
 }
 
 .title__secundary {
@@ -335,6 +413,7 @@ h1 {
 }
 
 form {
+  margin-left: 10px;
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr;
@@ -409,6 +488,32 @@ form {
   font-size: 1rem;
   padding: 5px 5px 5px 5px;
   width: 100%;
+}
+
+footer {
+  width: 100%;
+}
+
+.contact__us {
+  color: #FFFFFE;
+  line-height: 18px;
+  text-decoration-line: underline;
+  font-weight: 400;
+  font-size: 1.2rem;
+  margin-left: 10px;
+}
+
+.container__reds {
+  display: flex;
+  flex-direction: row;
+  margin: 20px 0px 0px 10px;
+  gap: 25px;
+}
+
+.whatsapp {
+  position: relative;
+  top: -60px;
+  left: 83%;
 }
 
 * {
