--- a/scss/parciales/_personalized.scss
+++ b/scss/parciales/_personalized.scss
@@ -10,7 +10,7 @@
     margin-left: 10px;
 }
 
-form {  
+form {margin-left: 10px;
    display: grid; 
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-columns: 1fr 1fr; 
