--- a/scss/parciales/_plans.scss
+++ b/scss/parciales/_plans.scss
@@ -1,4 +1,4 @@
-.class__title {
+.class__title { 
     color: $h1;
     font-size: 1.8rem;
     text-align: center;
@@ -10,7 +10,8 @@
     height: 0px;
     left: 0px;
     top: 25px;
-    border: 1px solid $botones
+    border: 1px solid $botones;
+    z-index: -1;
 }
 
 .plans {
