--- a/scss/parciales/_proyects.scss
+++ b/scss/parciales/_proyects.scss
@@ -1,5 +1,5 @@
 .proyects {
-    height: 100vh;
+    height: 35vh;
     
     
 }
@@ -7,8 +7,86 @@
 .women {
     background-image: url(../../images/women.png);
     position: absolute;
-    width: 137px;
-    height: 140px;
-    left: 184px;
-    top: 2385px;
+    width: 202px;
+    height: 200px;
+    left: 120px;
+    top: 2400px;
+    z-index: -2;
+}
+
+
+
+.container__blur {
+    background: linear-gradient(91.28deg, rgba(60, 65, 202, 0.1) 0%, rgba(234, 234, 234, 0.6) 100%);
+    border-top: 0.5px solid #7F5AF0;
+    backdrop-filter: blur(40px);
+    border-radius: 0px 0px 17px 17px;
+    width: 322px;
+    height: 50px;
+    position: relative;
+    z-index: 1;
+    top: -120px;
+    left: 19px;
+}
+
+.container__landing {
+    color: #050744;
+    font-size: 0.7rem;
+    text-align: center;
+    font-weight: 600;
+    line-height: 12px;
+}
+
+.container__description {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+   margin-top: 2px;
+   gap: 2px;
+}
+
+.text {text-align: center;
+    font-size: 0.4rem;
+    color: rgba(5, 7, 68, 0.5);
+    font-weight: 700;
+    line-height: 6px;
+}
+
+.container__icons {
+    margin-top: 2px;
+    display: flex;
+    justify-content: center;
+}
+
+.left__btn {
+    background-color: $botones;
+    box-shadow: 0px -2px 4px rgba(15, 15, 15, 0.4);
+    border-radius: 17px 0px;
+    transform: rotate(90deg);
+    position: relative;
+    width: 20px;
+    height: 35px;
+    left: 5px;
+    top: -23px;
+}
+
+.row__left {
+    transform: rotate(-90deg);
+}
+
+.right__btn {
+    background-color: $botones;
+    position: relative;
+    width: 20px;
+    height: 35px;
+    box-shadow: 0px -2px 4px rgba(15, 15, 15, 0.4);
+    border-radius: 0px 17px;
+    transform: rotate(-90deg);
+    top: -23px;
+    left: 272px;
+}
+
+.row__right {
+    transform: rotate(90deg);
 }
